--- a/frontend/src/styles/searchPage.css
+++ b/frontend/src/styles/searchPage.css
@@ -23,8 +23,8 @@ a {
 .controls {
     width: 20%;
     padding: 1rem;
-    /*background: #14161a;*/
-    /*color: #fff;*/
+    background: #14161a;
+    color: #fff;
 }
 
 .controls input {
@@ -39,6 +39,8 @@ a {
 .map {
     width: 80%;
     height: 100vh;
+    margin-left: 10px;
+    border-left: beige;
 }
 
 .highlight {
