Added Login/Front Page Styling

--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -14,6 +14,90 @@ a:hover {
     color: rgb(255, 184, 28);
 }
 
-.loginBody {
+.login-page {
+    background-image: url('yosemiteMountain.jpg') ; 
+    background-size: cover;
     height: 100vh;
 }
+
+.login-body {
+    font-family: Shadows Into Light;
+    height: 75%;
+    width: 28%;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 0.5px solid #000000;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+.welcome-tag {
+    padding-top: 20px;
+    padding-bottom: 25px;
+}
+
+.username-group {
+    padding-top: 20px;
+    padding-bottom: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.password-group {
+    padding-bottom: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.login-text {
+    text-decoration: none;
+    color: #000000;
+}
+
+* {
+    box-sizing: border-box;
+  }
+    
+  .navbar-light {
+    background-color: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  }
+  
+  .outer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+  }
+  
+  .inner {
+    width: 450px;
+    margin: auto;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 40px 55px 45px 55px;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+  
+  .custom-control-label {
+    font-weight: 400;
+  }
+  
+  .forgot-password,
+  .forgot-password a {
+    padding-top: 10px;
+    margin: 0;
+  }
+
+  .proceedAsGuest {
+      padding-top: 25%;
+      padding-left: 60%;
+  }
+
+  .submit {
+      width: 40%;
+  }
