--- a/frontend/src/styles/maps.css
+++ b/frontend/src/styles/maps.css
@@ -11,13 +11,11 @@ a {
     text-decoration: none;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .container {
     display: flex;
     height: 100vh;
+    background: #14161a;
+    color: #fff;
 }
 
 .controls {
