--- a/frontend/src/styles/facility.css
+++ b/frontend/src/styles/facility.css
@@ -10,11 +10,7 @@ a:hover {
     color: rgb(255, 184, 28);
 }
 
-.location-group{
-    padding-top: 1%;
-}
-
-.explore-body{
+.facility-body{
     text-align: left;
     justify-content: left;
     margin-top: 2%;
@@ -26,49 +22,58 @@ a:hover {
     padding-bottom: 3%;
     border: 0.5px solid #000000;
 }
+
+.facility-name{
+    width: 60%;
+}
+
+.facility-price{
+    width: 25%;
+}
+
 .map-group {
     padding-left: 0%;
 }
 
-.map-container {
+.facility-map-container {
     width: 100%;
-    height: 70vh;
+    height: 10vh;
     border: 0.5px solid #000000;
 }
 
-.search-group{
+.facility-group{
     justify-content: left;
     align-items: left;
-    height: 100px;
     padding-top: 2%;
     padding-bottom: 1%;
 }
 
-.combobox-input{
-    height: 50px;
-    width: 50px;
-    border: 0.5px solid #000000;
-    display: inline;
-    width: 50%;
+.facility-name, .facility-price, .facility-description {
+    margin-bottom: 2%;
 }
 
-.advanced-search{
+.street-address-name {
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+
+.city-name {
+    width: 30%;
+    margin-right: 15%;
+    display: inline;
+}
+.state-name {
     width: 20%;
-}
-
-.places-group {
-    padding-top: 3%;
-    font-size: 5px;
-}
-
-.location-card {
-    border: 0.5px solid #000000;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 2%;
-}
-
-.cb {
-    padding-right: 15%;
+    margin-right: 15%;
     display: inline;
+}
+.zip-number {
+    width: 20%;
+    display: inline;
+}
+
+.add-facility-submit {
+    margin-top: 5%;
+    margin-left: 85%;
+    width: 15%;
 }
