--- a/frontend/src/styles/customerDashboard.css
+++ b/frontend/src/styles/customerDashboard.css
@@ -21,7 +21,7 @@
 .customer-dashboard-park-card {
     border: 0.5px solid #000000;
     border-radius: 25px;
-    padding: 20px;
+    padding: 1%;
     margin-top: 1%;
     display: flex;
     align-items: center;
